--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('resources') }}">
+                        <a class="nav-link" href="/resources">
                             <i class="fas fa-book"></i> Resources
                         </a>
                     </li>
@@ -37,13 +37,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('community') }}">
+                        <a class="nav-link" href="/community">
                             <i class="fas fa-users"></i> Community Hub
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('support') }}">
-                            <i class="fas fa-hands-helping"></i> Support
+                        <a class="nav-link" href="/support">
+                            <i class="fas fa-headset"></i> Support
                         </a>
                     </li>
                 </ul>
